--- a/res/menu/bottom_nav_menu.xml
+++ b/res/menu/bottom_nav_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_jobs"
         android:icon="@drawable/baseline_search"
         android:title="@string/jobs" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_gespeichert"
         android:icon="@drawable/ic_baseline_favorite_border_24"
         android:title="@string/gespeichert" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_nachrichten"
         android:icon="@drawable/ic_baseline_message_24"
         android:title="@string/nachrichten" />
 
